--- a/Groupe 2/Groupe 2/rendu.ipynb
+++ b/Groupe 2/Groupe 2/rendu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,14 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\belkh\\AppData\\Local\\Temp\\ipykernel_19728\\2468350984.py:1: DtypeWarning: Columns (0,6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\belkh\\AppData\\Local\\Temp\\ipykernel_16048\\2468350984.py:1: DtypeWarning: Columns (0,6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(\"resultats-par-niveau-burvot-t1-france-entiere.txt\", header = 0, sep=';', encoding = 'latin-1')\n"
      ]
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
        "[32987 rows x 1 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
        "[69681 rows x 105 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
        "[69681 rows x 3 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1094,7 @@
        "83                  Var                              25.748270"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
        "64                  Pyrénées-Atlantiques    20.254557"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,18 +1296,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ouioui(x):\n",
-    "      tab = df[['Code du département','Libellé du département','% Abs/Ins', x]]\n",
-    "      return tab\n"
+    "def dep_info_2(x,y):\n",
+    "      tab = df[['Code du département','Libellé du département', x,y]]\n",
+    "      frame1 = pd.DataFrame(tab)\n",
+    "\n",
+    "      tab2 = frame1.groupby([\"Code du département\",\"Libellé du département\"]).mean()\n",
+    "      res = tab2.sort_values(by=y,ascending=False)\n",
+    "      \n",
+    "      return res.head(20)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1331,124 +1336,179 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Voix.MJL</th>\n",
+       "      <th>% Voix/Exp.MJL</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>Code du département</th>\n",
        "      <th>Libellé du département</th>\n",
-       "      <th>% Abs/Ins</th>\n",
-       "      <th>Voix.PP</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Ain</td>\n",
-       "      <td>17.84</td>\n",
-       "      <td>3</td>\n",
+       "      <th>ZA</th>\n",
+       "      <th>Guadeloupe</th>\n",
+       "      <td>180.194774</td>\n",
+       "      <td>56.348361</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Ain</td>\n",
-       "      <td>23.56</td>\n",
-       "      <td>8</td>\n",
+       "      <th>ZB</th>\n",
+       "      <th>Martinique</th>\n",
+       "      <td>196.072072</td>\n",
+       "      <td>53.153634</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Ain</td>\n",
-       "      <td>23.49</td>\n",
-       "      <td>4</td>\n",
+       "      <th>ZC</th>\n",
+       "      <th>Guyane</th>\n",
+       "      <td>135.395522</td>\n",
+       "      <td>51.049478</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Ain</td>\n",
-       "      <td>20.28</td>\n",
-       "      <td>3</td>\n",
+       "      <th>93</th>\n",
+       "      <th>Seine-Saint-Denis</th>\n",
+       "      <td>324.764921</td>\n",
+       "      <td>49.341583</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Ain</td>\n",
-       "      <td>24.01</td>\n",
-       "      <td>4</td>\n",
+       "      <th>ZD</th>\n",
+       "      <th>La Réunion</th>\n",
+       "      <td>150.111828</td>\n",
+       "      <td>40.794065</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>ZS</th>\n",
+       "      <th>Saint-Pierre-et-Miquelon</th>\n",
+       "      <td>276.250000</td>\n",
+       "      <td>39.545000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69676</th>\n",
-       "      <td>ZZ</td>\n",
-       "      <td>Français établis hors de France</td>\n",
-       "      <td>56.70</td>\n",
-       "      <td>47</td>\n",
+       "      <th>94</th>\n",
+       "      <th>Val-de-Marne</th>\n",
+       "      <td>264.346154</td>\n",
+       "      <td>37.257000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69677</th>\n",
-       "      <td>ZZ</td>\n",
-       "      <td>Français établis hors de France</td>\n",
-       "      <td>55.12</td>\n",
-       "      <td>10</td>\n",
+       "      <th>95</th>\n",
+       "      <th>Val-d'Oise</th>\n",
+       "      <td>216.604192</td>\n",
+       "      <td>32.796424</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69678</th>\n",
-       "      <td>ZZ</td>\n",
-       "      <td>Français établis hors de France</td>\n",
-       "      <td>54.70</td>\n",
-       "      <td>0</td>\n",
+       "      <th>ZN</th>\n",
+       "      <th>Nouvelle-Calédonie</th>\n",
+       "      <td>32.696970</td>\n",
+       "      <td>32.351515</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69679</th>\n",
-       "      <td>ZZ</td>\n",
-       "      <td>Français établis hors de France</td>\n",
-       "      <td>77.56</td>\n",
-       "      <td>1</td>\n",
+       "      <th>94</th>\n",
+       "      <th>Val-de-Marne</th>\n",
+       "      <td>226.966972</td>\n",
+       "      <td>32.168899</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69680</th>\n",
-       "      <td>ZZ</td>\n",
-       "      <td>Français établis hors de France</td>\n",
-       "      <td>57.35</td>\n",
-       "      <td>0</td>\n",
+       "      <th>75</th>\n",
+       "      <th>Paris</th>\n",
+       "      <td>352.635556</td>\n",
+       "      <td>29.893944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <th>Essonne</th>\n",
+       "      <td>187.988764</td>\n",
+       "      <td>28.357831</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZX</th>\n",
+       "      <th>Saint-Martin/Saint-Barthélemy</th>\n",
+       "      <td>90.538462</td>\n",
+       "      <td>28.130000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <th>Ariège</th>\n",
+       "      <td>63.081794</td>\n",
+       "      <td>27.967309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <th>Hauts-de-Seine</th>\n",
+       "      <td>194.202335</td>\n",
+       "      <td>26.588940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <th>Rhône</th>\n",
+       "      <td>173.907365</td>\n",
+       "      <td>25.260767</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <th>Haute-Garonne</th>\n",
+       "      <td>141.367515</td>\n",
+       "      <td>24.771085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <th>Hérault</th>\n",
+       "      <td>164.177094</td>\n",
+       "      <td>24.381919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <th>Seine-et-Marne</th>\n",
+       "      <td>155.426364</td>\n",
+       "      <td>24.373455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <th>Drôme</th>\n",
+       "      <td>109.493289</td>\n",
+       "      <td>24.279010</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>69681 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Code du département           Libellé du département  % Abs/Ins  Voix.PP\n",
-       "0                       1                              Ain      17.84        3\n",
-       "1                       1                              Ain      23.56        8\n",
-       "2                       1                              Ain      23.49        4\n",
-       "3                       1                              Ain      20.28        3\n",
-       "4                       1                              Ain      24.01        4\n",
-       "...                   ...                              ...        ...      ...\n",
-       "69676                  ZZ  Français établis hors de France      56.70       47\n",
-       "69677                  ZZ  Français établis hors de France      55.12       10\n",
-       "69678                  ZZ  Français établis hors de France      54.70        0\n",
-       "69679                  ZZ  Français établis hors de France      77.56        1\n",
-       "69680                  ZZ  Français établis hors de France      57.35        0\n",
-       "\n",
-       "[69681 rows x 4 columns]"
+       "                                                     Voix.MJL  % Voix/Exp.MJL\n",
+       "Code du département Libellé du département                                   \n",
+       "ZA                  Guadeloupe                     180.194774       56.348361\n",
+       "ZB                  Martinique                     196.072072       53.153634\n",
+       "ZC                  Guyane                         135.395522       51.049478\n",
+       "93                  Seine-Saint-Denis              324.764921       49.341583\n",
+       "ZD                  La Réunion                     150.111828       40.794065\n",
+       "ZS                  Saint-Pierre-et-Miquelon       276.250000       39.545000\n",
+       "94                  Val-de-Marne                   264.346154       37.257000\n",
+       "95                  Val-d'Oise                     216.604192       32.796424\n",
+       "ZN                  Nouvelle-Calédonie              32.696970       32.351515\n",
+       "94                  Val-de-Marne                   226.966972       32.168899\n",
+       "75                  Paris                          352.635556       29.893944\n",
+       "91                  Essonne                        187.988764       28.357831\n",
+       "ZX                  Saint-Martin/Saint-Barthélemy   90.538462       28.130000\n",
+       "9                   Ariège                          63.081794       27.967309\n",
+       "92                  Hauts-de-Seine                 194.202335       26.588940\n",
+       "69                  Rhône                          173.907365       25.260767\n",
+       "31                  Haute-Garonne                  141.367515       24.771085\n",
+       "34                  Hérault                        164.177094       24.381919\n",
+       "77                  Seine-et-Marne                 155.426364       24.373455\n",
+       "26                  Drôme                          109.493289       24.279010"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ouioui('Voix.PP')"
+    "voix_cand_dep('Voix.MJL', '% Voix/Exp.MJL')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1847,7 +1907,7 @@
        "[69681 rows x 105 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
