--- a/Groupe 2/Groupe 2/rendu.ipynb
+++ b/Groupe 2/Groupe 2/rendu.ipynb
@@ -1296,23 +1296,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dep_info_2(x,y):\n",
-    "      tab = df[['Code du département','Libellé du département', x,y]]\n",
+    "def dep(x,y):\n",
+    "      tab = df[['Code du département','Libellé du département', x]]\n",
     "      frame1 = pd.DataFrame(tab)\n",
-    "\n",
-    "      tab2 = frame1.groupby([\"Code du département\",\"Libellé du département\"]).mean()\n",
-    "      res = tab2.sort_values(by=y,ascending=False)\n",
+    "      tab2 = frame1.groupby([\"Code du département\",\"Libellé du département\"]).sum()\n",
+    "      res = tab2.sort_values(by=x,ascending=y)\n",
     "      \n",
     "      return res.head(20)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dep_prct(x,y):\n",
+    "      tab = df[['Code du département','Libellé du département', x]]\n",
+    "      frame1 = pd.DataFrame(tab)\n",
+    "      tab2 = frame1.groupby([\"Code du département\",\"Libellé du département\"]).mean()\n",
+    "      res = tab2.sort_values(by=x,ascending=y)\n",
+    "      \n",
+    "      return res.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1337,173 +1351,325 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th>Voix.MJL</th>\n",
-       "      <th>% Voix/Exp.MJL</th>\n",
+       "      <th>Voix.ME</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Code du département</th>\n",
        "      <th>Libellé du département</th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>ZA</th>\n",
-       "      <th>Guadeloupe</th>\n",
-       "      <td>180.194774</td>\n",
-       "      <td>56.348361</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ZB</th>\n",
-       "      <th>Martinique</th>\n",
-       "      <td>196.072072</td>\n",
-       "      <td>53.153634</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ZC</th>\n",
-       "      <th>Guyane</th>\n",
-       "      <td>135.395522</td>\n",
-       "      <td>51.049478</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <th>Seine-Saint-Denis</th>\n",
-       "      <td>324.764921</td>\n",
-       "      <td>49.341583</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ZD</th>\n",
-       "      <th>La Réunion</th>\n",
-       "      <td>150.111828</td>\n",
-       "      <td>40.794065</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ZS</th>\n",
-       "      <th>Saint-Pierre-et-Miquelon</th>\n",
-       "      <td>276.250000</td>\n",
-       "      <td>39.545000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <th>Val-de-Marne</th>\n",
-       "      <td>264.346154</td>\n",
-       "      <td>37.257000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <th>Val-d'Oise</th>\n",
-       "      <td>216.604192</td>\n",
-       "      <td>32.796424</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ZN</th>\n",
-       "      <th>Nouvelle-Calédonie</th>\n",
-       "      <td>32.696970</td>\n",
-       "      <td>32.351515</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <th>Val-de-Marne</th>\n",
-       "      <td>226.966972</td>\n",
-       "      <td>32.168899</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>75</th>\n",
        "      <th>Paris</th>\n",
-       "      <td>352.635556</td>\n",
-       "      <td>29.893944</td>\n",
+       "      <td>372820</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <th>Essonne</th>\n",
-       "      <td>187.988764</td>\n",
-       "      <td>28.357831</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ZX</th>\n",
-       "      <th>Saint-Martin/Saint-Barthélemy</th>\n",
-       "      <td>90.538462</td>\n",
-       "      <td>28.130000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <th>Ariège</th>\n",
-       "      <td>63.081794</td>\n",
-       "      <td>27.967309</td>\n",
+       "      <th>59</th>\n",
+       "      <th>Nord</th>\n",
+       "      <td>336138</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>92</th>\n",
        "      <th>Hauts-de-Seine</th>\n",
-       "      <td>194.202335</td>\n",
-       "      <td>26.588940</td>\n",
+       "      <td>287494</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>69</th>\n",
        "      <th>Rhône</th>\n",
-       "      <td>173.907365</td>\n",
-       "      <td>25.260767</td>\n",
+       "      <td>278243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <th>Loire-Atlantique</th>\n",
+       "      <td>256609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <th>Gironde</th>\n",
+       "      <td>256179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <th>Yvelines</th>\n",
+       "      <td>246062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <th>Bouches-du-Rhône</th>\n",
+       "      <td>229038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZZ</th>\n",
+       "      <th>Français établis hors de France</th>\n",
+       "      <td>224957</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <th>Ille-et-Vilaine</th>\n",
+       "      <td>205882</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <th>Haute-Garonne</th>\n",
-       "      <td>141.367515</td>\n",
-       "      <td>24.771085</td>\n",
+       "      <td>196712</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <th>Hérault</th>\n",
-       "      <td>164.177094</td>\n",
-       "      <td>24.381919</td>\n",
+       "      <th>62</th>\n",
+       "      <th>Pas-de-Calais</th>\n",
+       "      <td>194610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <th>Isère</th>\n",
+       "      <td>180533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <th>Seine-Maritime</th>\n",
+       "      <td>179698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <th>Bas-Rhin</th>\n",
+       "      <td>177069</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <th>Finistère</th>\n",
+       "      <td>174894</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>77</th>\n",
        "      <th>Seine-et-Marne</th>\n",
-       "      <td>155.426364</td>\n",
-       "      <td>24.373455</td>\n",
+       "      <td>165208</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <th>Drôme</th>\n",
-       "      <td>109.493289</td>\n",
-       "      <td>24.279010</td>\n",
+       "      <th>91</th>\n",
+       "      <th>Essonne</th>\n",
+       "      <td>164503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <th>Maine-et-Loire</th>\n",
+       "      <td>157063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <th>Morbihan</th>\n",
+       "      <td>152740</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                     Voix.MJL  % Voix/Exp.MJL\n",
-       "Code du département Libellé du département                                   \n",
-       "ZA                  Guadeloupe                     180.194774       56.348361\n",
-       "ZB                  Martinique                     196.072072       53.153634\n",
-       "ZC                  Guyane                         135.395522       51.049478\n",
-       "93                  Seine-Saint-Denis              324.764921       49.341583\n",
-       "ZD                  La Réunion                     150.111828       40.794065\n",
-       "ZS                  Saint-Pierre-et-Miquelon       276.250000       39.545000\n",
-       "94                  Val-de-Marne                   264.346154       37.257000\n",
-       "95                  Val-d'Oise                     216.604192       32.796424\n",
-       "ZN                  Nouvelle-Calédonie              32.696970       32.351515\n",
-       "94                  Val-de-Marne                   226.966972       32.168899\n",
-       "75                  Paris                          352.635556       29.893944\n",
-       "91                  Essonne                        187.988764       28.357831\n",
-       "ZX                  Saint-Martin/Saint-Barthélemy   90.538462       28.130000\n",
-       "9                   Ariège                          63.081794       27.967309\n",
-       "92                  Hauts-de-Seine                 194.202335       26.588940\n",
-       "69                  Rhône                          173.907365       25.260767\n",
-       "31                  Haute-Garonne                  141.367515       24.771085\n",
-       "34                  Hérault                        164.177094       24.381919\n",
-       "77                  Seine-et-Marne                 155.426364       24.373455\n",
-       "26                  Drôme                          109.493289       24.279010"
+       "                                                     Voix.ME\n",
+       "Code du département Libellé du département                  \n",
+       "75                  Paris                             372820\n",
+       "59                  Nord                              336138\n",
+       "92                  Hauts-de-Seine                    287494\n",
+       "69                  Rhône                             278243\n",
+       "44                  Loire-Atlantique                  256609\n",
+       "33                  Gironde                           256179\n",
+       "78                  Yvelines                          246062\n",
+       "13                  Bouches-du-Rhône                  229038\n",
+       "ZZ                  Français établis hors de France   224957\n",
+       "35                  Ille-et-Vilaine                   205882\n",
+       "31                  Haute-Garonne                     196712\n",
+       "62                  Pas-de-Calais                     194610\n",
+       "38                  Isère                             180533\n",
+       "76                  Seine-Maritime                    179698\n",
+       "67                  Bas-Rhin                          177069\n",
+       "29                  Finistère                         174894\n",
+       "77                  Seine-et-Marne                    165208\n",
+       "91                  Essonne                           164503\n",
+       "49                  Maine-et-Loire                    157063\n",
+       "56                  Morbihan                          152740"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "voix_cand_dep('Voix.MJL', '% Voix/Exp.MJL')"
+    "dep('Voix.ME', False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>% Voix/Ins.MJL</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Code du département</th>\n",
+       "      <th>Libellé du département</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <th>Seine-Saint-Denis</th>\n",
+       "      <td>33.204836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <th>Val-de-Marne</th>\n",
+       "      <td>26.587269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZA</th>\n",
+       "      <th>Guadeloupe</th>\n",
+       "      <td>23.906081</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <th>Val-de-Marne</th>\n",
+       "      <td>23.333376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <th>Val-d'Oise</th>\n",
+       "      <td>23.157016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <th>Paris</th>\n",
+       "      <td>22.732333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <th>Ariège</th>\n",
+       "      <td>22.067836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZB</th>\n",
+       "      <th>Martinique</th>\n",
+       "      <td>21.207718</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZS</th>\n",
+       "      <th>Saint-Pierre-et-Miquelon</th>\n",
+       "      <td>20.777500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZD</th>\n",
+       "      <th>La Réunion</th>\n",
+       "      <td>20.666516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <th>Essonne</th>\n",
+       "      <td>20.506382</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <th>Hauts-de-Seine</th>\n",
+       "      <td>20.009484</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <th>Haute-Garonne</th>\n",
+       "      <td>19.358810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <th>Lot</th>\n",
+       "      <td>19.213097</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <th>Drôme</th>\n",
+       "      <td>18.854144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <th>Rhône</th>\n",
+       "      <td>18.834199</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <th>Hautes-Alpes</th>\n",
+       "      <td>18.762367</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <th>Hérault</th>\n",
+       "      <td>18.289883</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <th>Ardèche</th>\n",
+       "      <td>18.026446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <th>Seine-et-Marne</th>\n",
+       "      <td>17.756227</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              % Voix/Ins.MJL\n",
+       "Code du département Libellé du département                  \n",
+       "93                  Seine-Saint-Denis              33.204836\n",
+       "94                  Val-de-Marne                   26.587269\n",
+       "ZA                  Guadeloupe                     23.906081\n",
+       "94                  Val-de-Marne                   23.333376\n",
+       "95                  Val-d'Oise                     23.157016\n",
+       "75                  Paris                          22.732333\n",
+       "9                   Ariège                         22.067836\n",
+       "ZB                  Martinique                     21.207718\n",
+       "ZS                  Saint-Pierre-et-Miquelon       20.777500\n",
+       "ZD                  La Réunion                     20.666516\n",
+       "91                  Essonne                        20.506382\n",
+       "92                  Hauts-de-Seine                 20.009484\n",
+       "31                  Haute-Garonne                  19.358810\n",
+       "46                  Lot                            19.213097\n",
+       "26                  Drôme                          18.854144\n",
+       "69                  Rhône                          18.834199\n",
+       "5                   Hautes-Alpes                   18.762367\n",
+       "34                  Hérault                        18.289883\n",
+       "7                   Ardèche                        18.026446\n",
+       "77                  Seine-et-Marne                 17.756227"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dep_prct('% Voix/Ins.MJL', False)"
    ]
   },
   {
