--- a/Groupe 2/Groupe 2/rendu.ipynb
+++ b/Groupe 2/Groupe 2/rendu.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -35,19 +35,19 @@
    ],
    "source": [
     "df = pd.read_csv(\"resultats-par-niveau-burvot-t1-france-entiere.txt\", header = 0, sep=';', encoding = 'latin-1')\n",
-    "df0 = df[['Code du département', 'Libellé du département', 'Code de la circonscription', 'Libellé de la circonscription', 'Code de la commune', 'Libellé de la commune', 'Code du b.vote', 'Inscrits', 'Abstentions', '% Abs/Ins', 'Votants', '% Vot/Ins', 'Blancs', '% Blancs/Ins', '% Blancs/Vot', 'Nuls', '% Nuls/Ins', '% Nuls/Vot', 'Exprimés', '% Exp/Ins', '% Exp/Vot']]\n",
-    "df_AN = df[['N°Panneau.AN', 'Sexe.AN', 'Nom.AN', 'Prénom.AN', 'Voix.AN', '% Voix/Ins.AN', '% Voix/Exp.AN']]\n",
-    "df_RF = df[['N°Panneau.RF', 'Sexe.RF', 'Nom.RF', 'Prénom.RF', 'Voix.RF', '% Voix/Ins.RF', '% Voix/Exp.RF']]\n",
-    "df_ME = df[['N°Panneau.ME', 'Sexe.ME', 'Nom.ME', 'Prénom.ME', 'Voix.ME', '% Voix/Ins.ME', '% Voix/Exp.ME']]\n",
-    "df_LJ = df[['N°Panneau.LJ', 'Sexe.LJ', 'Nom.LJ', 'Prénom.LJ', 'Voix.LJ', '% Voix/Ins.LJ', '% Voix/Exp.LJ']]\n",
-    "df_LPM = df[['N°Panneau.LPM', 'Sexe.LPM', 'Nom.LPM', 'Prénom.LPM', 'Voix.LPM', '% Voix/Ins.LPM', '% Voix/Exp.LPM']]\n",
-    "df_ZE = df[['N°Panneau.ZE', 'Sexe.ZE', 'Nom.ZE', 'Prénom.ZE', 'Voix.ZE', '% Voix/Ins.ZE', '% Voix/Exp.ZE']]\n",
-    "df_MJL = df[['N°Panneau.MJL', 'Sexe.MJL', 'Nom.MJL', 'Prénom.MJL', 'Voix.MJL', '% Voix/Ins.MJL', '% Voix/Exp.MJL']]\n",
-    "df_HA = df[['N°Panneau.HA', 'Sexe.HA', 'Nom.HA', 'Prénom.HA', 'Voix.HA', '% Voix/Ins.HA', '% Voix/Exp.HA']]\n",
-    "df_JY = df[['N°Panneau.JY', 'Sexe.JY', 'Nom.JY', 'Prénom.JY', 'Voix.JY', '% Voix/Ins.JY', '% Voix/Exp.JY']]\n",
-    "df_PV = df[['N°Panneau.PV', 'Sexe.PV', 'Nom.PV', 'Prénom.PV', 'Voix.PV', '% Voix/Ins.PV', '% Voix/Exp.PV']]\n",
-    "df_PP = df[['N°Panneau.PP', 'Sexe.PP', 'Nom.PP', 'Prénom.PP', 'Voix.PP', '% Voix/Ins.PP', '% Voix/Exp.PP']]\n",
-    "df_DAN = df[['N°Panneau.DAN', 'Sexe.DAN', 'Nom.DAN', 'Prénom.DAN', 'Voix.DAN', '% Voix/Ins.DAN', '% Voix/Exp.DAN']]"
+    "df0 = df[['Code du département', 'Libellé du département', 'Code de la commune', 'Libellé de la commune', 'Inscrits', 'Abstentions', '% Abs/Ins', 'Votants', '% Vot/Ins', 'Blancs', '% Blancs/Ins', '% Blancs/Vot', 'Nuls', '% Nuls/Ins', '% Nuls/Vot', 'Exprimés', '% Exp/Ins', '% Exp/Vot']]\n",
+    "df_AN = df[['Sexe.AN', 'Nom.AN', 'Prénom.AN', 'Voix.AN', '% Voix/Ins.AN', '% Voix/Exp.AN']]\n",
+    "df_RF = df[['Sexe.RF', 'Nom.RF', 'Prénom.RF', 'Voix.RF', '% Voix/Ins.RF', '% Voix/Exp.RF']]\n",
+    "df_ME = df[['Sexe.ME', 'Nom.ME', 'Prénom.ME', 'Voix.ME', '% Voix/Ins.ME', '% Voix/Exp.ME']]\n",
+    "df_LJ = df[['Sexe.LJ', 'Nom.LJ', 'Prénom.LJ', 'Voix.LJ', '% Voix/Ins.LJ', '% Voix/Exp.LJ']]\n",
+    "df_LPM = df[['Sexe.LPM', 'Nom.LPM', 'Prénom.LPM', 'Voix.LPM', '% Voix/Ins.LPM', '% Voix/Exp.LPM']]\n",
+    "df_ZE = df[['Sexe.ZE', 'Nom.ZE', 'Prénom.ZE', 'Voix.ZE', '% Voix/Ins.ZE', '% Voix/Exp.ZE']]\n",
+    "df_MJL = df[['Sexe.MJL', 'Nom.MJL', 'Prénom.MJL', 'Voix.MJL', '% Voix/Ins.MJL', '% Voix/Exp.MJL']]\n",
+    "df_HA = df[['Sexe.HA', 'Nom.HA', 'Prénom.HA', 'Voix.HA', '% Voix/Ins.HA', '% Voix/Exp.HA']]\n",
+    "df_JY = df[['Sexe.JY', 'Nom.JY', 'Prénom.JY', 'Voix.JY', '% Voix/Ins.JY', '% Voix/Exp.JY']]\n",
+    "df_PV = df[['Sexe.PV', 'Nom.PV', 'Prénom.PV', 'Voix.PV', '% Voix/Ins.PV', '% Voix/Exp.PV']]\n",
+    "df_PP = df[['Sexe.PP', 'Nom.PP', 'Prénom.PP', 'Voix.PP', '% Voix/Ins.PP', '% Voix/Exp.PP']]\n",
+    "df_DAN = df[['Sexe.DAN', 'Nom.DAN', 'Prénom.DAN', 'Voix.DAN', '% Voix/Ins.DAN', '% Voix/Exp.DAN']]"
    ]
   },
   {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,22 +210,269 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Voix.MJL</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Code du département</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>317372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>279785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>266632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>237971</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>229036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZP</th>\n",
+       "      <td>7990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZX</th>\n",
+       "      <td>2354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>1773</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZS</th>\n",
+       "      <td>1105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZW</th>\n",
+       "      <td>501</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>110 rows × 1 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "48246"
+       "                     Voix.MJL\n",
+       "Code du département          \n",
+       "75                     317372\n",
+       "59                     279785\n",
+       "93                     266632\n",
+       "13                     237971\n",
+       "69                     229036\n",
+       "...                       ...\n",
+       "ZP                       7990\n",
+       "ZX                       2354\n",
+       "28                       1773\n",
+       "ZS                       1105\n",
+       "ZW                        501\n",
+       "\n",
+       "[110 rows x 1 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "max(df_LJ_dep['Voix.LJ'])"
+    "df_MJL_dep_voix.sort_values(by = 'Voix.MJL', ascending = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ZE_dep = pd.pivot_table(data = df, index = 'Code du département', values = '% Voix/Ins.ZE', aggfunc = 'mean')\n",
+    "df_DAN_dep = pd.pivot_table(data = df, index = 'Code du département', values = '% Voix/Ins.DAN', aggfunc = 'mean')\n",
+    "df_AN_dep = pd.pivot_table(data = df, index = 'Code du département', values = '% Voix/Ins.AN', aggfunc = 'mean')\n",
+    "df_HA_dep = pd.pivot_table(data = df, index = 'Code du département', values = '% Voix/Ins.HA', aggfunc = 'mean')\n",
+    "df_JY_dep = pd.pivot_table(data = df, index = 'Code du département', values = '% Voix/Ins.JY', aggfunc = 'mean')\n",
+    "df_LJ_dep = pd.pivot_table(data = df, index = 'Code du département', values = '% Voix/Ins.LJ', aggfunc = 'mean')\n",
+    "df_LPM_dep = pd.pivot_table(data = df, index = 'Code du département', values = '% Voix/Ins.LPM', aggfunc = 'mean')\n",
+    "df_ME_dep = pd.pivot_table(data = df, index = 'Code du département', values = '% Voix/Ins.ME', aggfunc = 'mean')\n",
+    "df_MJL_dep = pd.pivot_table(data = df, index = 'Code du département', values = '% Voix/Ins.MJL', aggfunc = 'mean')\n",
+    "df_PV_dep = pd.pivot_table(data = df, index = 'Code du département', values = '% Voix/Ins.PV', aggfunc = 'mean')\n",
+    "df_PP_dep = pd.pivot_table(data = df, index = 'Code du département', values = '% Voix/Ins.PP', aggfunc = 'mean')\n",
+    "df_RF_dep = pd.pivot_table(data = df, index = 'Code du département', values = '% Voix/Ins.RF', aggfunc = 'mean')\n",
+    "df_BLANC_dep = pd.pivot_table(data = df, index = 'Code du département', values = '% Blancs/Ins', aggfunc = 'mean')\n",
+    "df_ABS_dep = pd.pivot_table(data = df, index = 'Code du département', values = '% Abs/Ins', aggfunc = 'mean')\n",
+    "df_NUL_dep = pd.pivot_table(data = df, index = 'Code du département', values = '% Nuls/Ins', aggfunc = 'mean')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>% Voix/Ins.MJL</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Code du département</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>33.204836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>26.587269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZA</th>\n",
+       "      <td>23.906081</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>23.333376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>23.157016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2B</th>\n",
+       "      <td>8.171508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2A</th>\n",
+       "      <td>7.686045</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZW</th>\n",
+       "      <td>5.260000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZN</th>\n",
+       "      <td>4.716498</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZP</th>\n",
+       "      <td>3.567160</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>110 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     % Voix/Ins.MJL\n",
+       "Code du département                \n",
+       "93                        33.204836\n",
+       "94                        26.587269\n",
+       "ZA                        23.906081\n",
+       "94                        23.333376\n",
+       "95                        23.157016\n",
+       "...                             ...\n",
+       "2B                         8.171508\n",
+       "2A                         7.686045\n",
+       "ZW                         5.260000\n",
+       "ZN                         4.716498\n",
+       "ZP                         3.567160\n",
+       "\n",
+       "[110 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_MJL_dep.sort_values(by = '% Voix/Ins.MJL', ascending = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "vscode": {
+     "languageId": "markdown"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33.20483556638246"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(df_MJL_dep['% Voix/Ins.MJL'])"
    ]
   },
   {
